<resources>
    <!--General Strings-->
    <string name="app_name">Mastermind</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!--Main Menu Page Strings-->
    <string name="username">championMajor</string>
    <string name="bttn">Play</string>
    <string name="setting">This is the settings page</string>
    <string name="setting_bttn">Rules</string>
    <string name="quit_bttn">Quit</string>

    <!-- Rules Page Strings-->
    <string name="rules_btn">Game Modes</string>
    <string name="general_rules">General Rules</string>
    <string name="rules_paragraph">Mastermind is a code breaking game based on the classic board game of the same name. "&#xD;"  "&#xD;"A sequence of colours is selected, this is the code length and it can be changed before starting a new game."&#xD;"  "&#xD;"The aim of the game is to guess the correct positions and colour of the sequence. "&#xD;"  "&#xD;"The default setting is that a colour can only be used once in the code sequence. "&#xD;"  "&#xD;"However, if allow duplicates is selected in the game setup screen then colours can be used any number of times."&#xD;"
    "&#xD;"The player then guesses the code sequence by filling in a line and “confirming” their guess. "&#xD;"  "&#xD;"The result will be displayed on the right of the board and will return either:
          "&#xD;"
    "&#xD;"   • A red pin, which indicates that there is a correct colour in the correct position in your guess."&#xD;"
    "&#xD;"   • A white pin, which indicates that there is a correct colour in the wrong position in your guess."&#xD;"
    "&#xD;"   • A blank pin, which indicates that the colour chosen, is not in the code.
        "&#xD;"
    "&#xD;"The game is won when all of the colours in your guess are in the correct position and you have solved the code.  "&#xD;"
        "&#xD;"The game is lost if you run out of guesses, or the time limit expires. "&#xD;"  "&#xD;"Both of these settings can be changed in the game set up.</string>

    <!--Game Modes Rules-->
    <string name="game_mode_rules">        ~~~~~~~~Single player~~~~~~~~"&#xD;"  "&#xD;"
The code is randomly generated by the computer based on the code length you specify in the game set up."&#xD;"  "&#xD;"The player then guesses the code and attempts to break it in the number of guesses and time limit chosen."&#xD;"  "&#xD;"The player wins if they are successful in cracking the code."&#xD;" "&#xD;"~~~~~~~Local Multiplayer~~~~~~~"&#xD;" "&#xD;"The code is selected by player two on the same device."&#xD;" "&#xD;" Player two then submits the code."&#xD;" "&#xD;" Player one is then handed the device and must attempt to crack the code."&#xD;" "&#xD;"If player one solves the code then they are the winner."&#xD;" "&#xD;"However, if they fail to solve the code then player two is the winner."&#xD;" "&#xD;"~~~~~~~Online Multiplayer~~~~~~~"&#xD;" "&#xD;"Two players enter a game, matched upon their settings, and play over 3 rounds."&#xD;" "&#xD;"One player is chosen at random to set the code for the first round."&#xD;" "&#xD;"Player two will then attempt to crack this code as player one watches."&#xD;" "&#xD;"If they are successful then they win the round, if they are unsuccessful then player one wins the round."&#xD;" "&#xD;"Round 2 is the same as round one except the roles are changed."&#xD;" "&#xD;" Player two will now set the code and player one will attempt to crack the code."&#xD;" "&#xD;"Round 3 is the final round of the game."&#xD;" "&#xD;"In this round, both players will receive the same code generated by the computer."&#xD;" "&#xD;"They will then compete head-to-head to solve the code; the first one to crack it wins the round."&#xD;" "&#xD;"If neither player solves the code in the time limit or runs out of guesses then the round is a draw."&#xD;" "&#xD;"The winner and loser is then displayed or in the result of the same score, a draw is declared.
</string>

    <!--Settings Page Strings-->
    <string name="settings_page_text">Please select your desired game settings</string>
    <string name="pegs_setting">Length of code: </string>
    <string name="duplicate_setting">Allow duplicate pegs: </string>
    <string name="time_setting">Time limit: </string>
    <string name="tries_setting">Number of tries: </string>
    <string name="single_start_btn">Single</string>
    <string name="local_start_btn">Local</string>
    <string name="online_start_btn">Online</string>
    <!--Single Page Strings-->
    <string name="single_player_text">This is the single player page</string>
    <!--Local Page Strings-->
    <string name="local_multi_text">This is the local multi-player page</string>
    <!--Victory Screen-->
    <string name="win">Congratulations, you win!</string>
    <string name="loss">Hard luck!</string>
    <string name="time_up">Time\'s up!</string>
    <!--Online Page String-->
    <string name="online_multi_text">This is the online multi-player page</string>
    <string name="game_title">Mastermind!</string>
    <string name="game_blurb">Please Sign In with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="score_label">%1$s - Me</string>

</resources>
