<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context="com.gg.user.mastermind.RulesPage">

    <Button
        android:id="@+id/btn_gameRules"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rules_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/general_rules"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginTop="30dp"
        android:text="@string/general_rules"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="90dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:background="@color/offblue"
            app:layout_constraintBottom_toTopOf="@id/btn_gameRules">

            <TextView
                android:id="@+id/TEXT_STATUS_ID"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/rules_paragraph"
                android:textSize="19sp"
                android:textColor="@color/black"/>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
